Alpine, Image Gallery, Hero animation, copy

--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -107,6 +107,8 @@ const { actions = await Astro.slots.render('actions') } = Astro.props;
       animation: linear reveal both;
       animation-timeline: --revealing-image;
       animation-range: entry 5% cover 40%;
+      transition-timing-function: ease;
+      transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
     }
   }
 </style>
