--- a/src/components/widgets/Testimonials_2.astro
+++ b/src/components/widgets/Testimonials_2.astro
@@ -15,9 +15,7 @@ import type { Hero as Props } from '~/types';
       >
       </div>
       <h2 class="text-lg relative font-semibold leading-8 tracking-tight text-[#5BB4CC]">Testimonials</h2>
-      <p class="mt-2 text-3xl font-bold tracking-tight text-[#517994] sm:text-4xl">
-        We have worked with amazing people
-      </p>
+      <p class="mt-2 text-3xl font-bold tracking-tight text-[#517994] sm:text-4xl">Creating Art for Amazing People</p>
     </div>
     <div class="mx-auto relative mt-16 flow-root max-w-2xl sm:mt-20 lg:mx-0 lg:max-w-none">
       <div class="-mt-8 sm:-mx-4 grid sm:grid-cols-2 sm:text-[0] lg:grid-cols-4">
