--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -179,7 +179,9 @@ const paintImg = '~/assets/images/paint_gray.png';
           <div
             class="ml-auto w-44 flex-none space-y-8 pt-32 sm:ml-0 sm:pt-80 lg:order-last lg:pt-36 xl:order-none xl:pt-80"
           >
-            <div class="relative">
+            <div
+              class="relative intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+            >
               <Image
                 src="~/assets/images/photos/hero-04.jpg"
                 alt="Tūī portrait oil painting"
@@ -190,7 +192,9 @@ const paintImg = '~/assets/images/paint_gray.png';
             </div>
           </div>
           <div class="mr-auto w-44 flex-none space-y-8 sm:mr-0 sm:pt-52 lg:pt-36">
-            <div class="relative">
+            <div
+              class="relative intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+            >
               <Image
                 src="~/assets/images/photos/hero-07.jpg"
                 alt="Brushes and oil paint"
@@ -199,7 +203,9 @@ const paintImg = '~/assets/images/paint_gray.png';
               />
               <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
             </div>
-            <div class="relative">
+            <div
+              class="relative intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+            >
               <Image
                 src="~/assets/images/photos/hero-01.jpg"
                 alt="New Zealand Tieke bierd"
@@ -210,7 +216,9 @@ const paintImg = '~/assets/images/paint_gray.png';
             </div>
           </div>
           <div class="w-44 flex-none space-y-8 pt-32 sm:pt-0">
-            <div class="relative">
+            <div
+              class="relative intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+            >
               <Image
                 src="~/assets/images/photos/hero-02.jpg"
                 alt="New Zealand Fantail bierd"
@@ -219,7 +227,9 @@ const paintImg = '~/assets/images/paint_gray.png';
               />
               <div class="pointer-events-none absolute inset-0 rounded-xl ring-1 ring-inset ring-gray-900/10"></div>
             </div>
-            <div class="relative">
+            <div
+              class="relative intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+            >
               <Image
                 src="~/assets/images/photos/hero-05.jpg"
                 alt="Brushes and oil paint"
