--- a/src/components/widgets/Testimonials_2.astro
+++ b/src/components/widgets/Testimonials_2.astro
@@ -26,18 +26,20 @@ import type { Hero as Props } from '~/types';
           <figure class="rounded-2xl bg-white p-8 text-sm leading-6">
             <blockquote class="text-gray-900">
               <p>
-                “Excepteur consectetur deserunt id incididunt veniam mollit officia sint qui aute duis sit cillum.
-                Reprehenderit fugiat amet aliqua in commodo minim sunt laborum.”
+                "Alex brought my dream to life with a stunning painting of a hummingbird and fantail greeting in a
+                hongi, symbolizing my life in Chile and New Zealand. Her talent and inspiration made it the most
+                meaningful artwork I own. Truly incredible!"
               </p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img
-                class="h-10 w-10 rounded-full bg-gray-50"
-                src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt=""
+              <Image
+                src="~/assets/images/testimonials/liliana-farias.jpg"
+                alt="Dani Amora"
+                width={50}
+                class="size-10 rounded-full bg-gray-50"
               />
               <div class="flex gap-2">
-                <div class="font-semibold text-gray-900">Lindsay Walton</div>
+                <div class="font-semibold text-gray-900">Liliana Farias</div>
                 <span class="text-[#5BB4CC] font-bold">/</span>
                 <div class="text-gray-600">🇨🇱</div>
               </div>
@@ -103,18 +105,20 @@ import type { Hero as Props } from '~/types';
           <figure class="rounded-2xl bg-white p-8 text-sm leading-6">
             <blockquote class="text-gray-900">
               <p>
-                “Excepteur consectetur deserunt id incididunt veniam mollit officia sint qui aute duis sit cillum.
-                Reprehenderit fugiat amet aliqua in commodo minim sunt laborum.”
+                "I wanted a portrait of my little dog, Kimie, for my new home, and without hesitation, I thought of
+                Alejandra. She did a beautiful job, capturing the essence, colours, and expression of my pet perfectly.
+                I'm already thinking of ordering a second one for the new member of the family, "Mojito.""
               </p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img
-                class="h-10 w-10 rounded-full bg-gray-50"
-                src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt=""
+              <Image
+                src="~/assets/images/testimonials/mariana-delgado.jpg"
+                alt="Dani Amora"
+                width={50}
+                class="size-10 rounded-full bg-gray-50"
               />
               <div class="flex gap-2">
-                <div class="font-semibold text-gray-900">Lindsay Walton</div>
+                <div class="font-semibold text-gray-900">Marina Delgado</div>
                 <span class="text-[#5BB4CC] font-bold">/</span>
                 <div class="text-gray-600">🇨🇱</div>
               </div>
