--- a/src/components/widgets/Testimonials_2.astro
+++ b/src/components/widgets/Testimonials_2.astro
@@ -40,8 +40,8 @@ import type { Hero as Props } from '~/types';
               />
               <div class="flex gap-2">
                 <div class="font-semibold text-gray-900">Liliana Farias</div>
-                <span class="text-[#5BB4CC] font-bold">/</span>
-                <div class="text-gray-600">🇨🇱</div>
+                <!-- <span class="text-[#5BB4CC] font-bold">/</span>
+                <div class="text-gray-600">🇨🇱</div> -->
               </div>
             </figcaption>
           </figure>
@@ -67,8 +67,8 @@ import type { Hero as Props } from '~/types';
               />
               <div class="flex gap-2">
                 <div class="font-semibold text-gray-900">Evie Aitcheson</div>
-                <span class="text-[#5BB4CC] font-bold">/</span>
-                <div class="text-gray-600">🇳🇿</div>
+                <!-- <span class="text-[#5BB4CC] font-bold">/</span>
+                <div class="text-gray-600">🇳🇿</div> -->
               </div>
             </figcaption>
           </figure>
@@ -93,8 +93,8 @@ import type { Hero as Props } from '~/types';
               />
               <div class="flex gap-2">
                 <div class="font-semibold text-gray-900">Dani Amora</div>
-                <span class="text-[#5BB4CC] font-bold">/</span>
-                <div class="text-gray-600">🇨🇱</div>
+                <!-- <span class="text-[#5BB4CC] font-bold">/</span>
+                <div class="text-gray-600">🇨🇱</div> -->
               </div>
             </figcaption>
           </figure>
@@ -119,8 +119,8 @@ import type { Hero as Props } from '~/types';
               />
               <div class="flex gap-2">
                 <div class="font-semibold text-gray-900">Marina Delgado</div>
-                <span class="text-[#5BB4CC] font-bold">/</span>
-                <div class="text-gray-600">🇨🇱</div>
+                <!-- <span class="text-[#5BB4CC] font-bold">/</span>
+                <div class="text-gray-600">🇨🇱</div> -->
               </div>
             </figcaption>
           </figure>
