--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,14 @@ const galleryImages = [
     size: '50x50 cms.',
   },
   {
+    photo: '~/assets/images/cuadros/circle/mujer-durmiendo.jpg',
+    title: 'Woman sleeping',
+    alt: 'Woman sleeping',
+    price: 'Available',
+    description: 'Oil on canvas',
+    size: '91x121 cms.',
+  },
+  {
     photo: '~/assets/images/cuadros/circle/kings.jpg',
     title: 'Kingfishers oil painting',
     alt: 'New Zealand Kingfishers birds',
@@ -231,7 +239,7 @@ const galleryImages = [
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
+      <h3 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">Building on modern foundations</h3>
       Gain a competitive advantage by incorporating industry leading practices
     </Fragment>
 
